# colombe

./: .gitignore  .ocamlformat  .travis.yml  CHANGES.md  CHANGES.received.md  LICENSE  README.md  colombe.opam  dune-project  index.html  msendmail.opam  received.opam  reply_codes.md  sendmail-lwt.opam  sendmail-miou-unix.opam  sendmail-mirage.opam  sendmail.opam  smtp.txt
client/: client.ml  dune  lwt_client.ml  lwt_client.mli  protocol.ml  protocol.mli  send_mail.ml  send_mail.mli  unix_client.ml
colombe/: index.html
colombe/Auth/: index.html
colombe/Auth/Client/: index.html
colombe/Auth/Extension/: index.html
colombe/Colombe/: index.html
colombe/Colombe/Decoder/: index.html
colombe/Colombe/Domain/: index.html
colombe/Colombe/Encoder/: index.html
colombe/Colombe/Forward_path/: index.html
colombe/Colombe/Path/: index.html
colombe/Colombe/Reply/: index.html
colombe/Colombe/Request/: index.html
colombe/Colombe/Reverse_path/: index.html
colombe/Colombe/Rfc1869/: index.html
colombe/Colombe/Sigs/: index.html
colombe/Colombe/State/: index.html
colombe/Colombe__/: index.html
colombe/Colombe__/Decoder/: index.html
colombe/Colombe__/Domain/: index.html
colombe/Colombe__/Encoder/: index.html
colombe/Colombe__/Forward_path/: index.html
colombe/Colombe__/Path/: index.html
colombe/Colombe__/Reply/: index.html
colombe/Colombe__/Request/: index.html
colombe/Colombe__/Reverse_path/: index.html
colombe/Colombe__/Rfc1869/: index.html
colombe/Colombe__/Sigs/: index.html
colombe/Colombe__/State/: index.html
colombe/Colombe__Decoder/: index.html
colombe/Colombe__Domain/: index.html
colombe/Colombe__Domain/Decoder/: index.html
colombe/Colombe__Domain/Parser/: index.html
colombe/Colombe__Domain/Peano/: index.html
colombe/Colombe__Encoder/: index.html
colombe/Colombe__Forward_path/: index.html
colombe/Colombe__Forward_path/Decoder/: index.html
colombe/Colombe__Forward_path/Encoder/: index.html
colombe/Colombe__Forward_path/Parser/: index.html
colombe/Colombe__Path/: index.html
colombe/Colombe__Path/Decoder/: index.html
colombe/Colombe__Path/Encoder/: index.html
colombe/Colombe__Path/Parser/: index.html
colombe/Colombe__Reply/: index.html
colombe/Colombe__Reply/Decoder/: index.html
colombe/Colombe__Reply/Encoder/: index.html
colombe/Colombe__Request/: index.html
colombe/Colombe__Request/Decoder/: index.html
colombe/Colombe__Request/Encoder/: index.html
colombe/Colombe__Reverse_path/: index.html
colombe/Colombe__Reverse_path/Decoder/: index.html
colombe/Colombe__Reverse_path/Encoder/: index.html
colombe/Colombe__Reverse_path/Parser/: index.html
colombe/Colombe__Rfc1869/: index.html
colombe/Colombe__Rfc1869/Injection/: index.html
colombe/Colombe__Rfc1869/module-type-CLIENT/: index.html
colombe/Colombe__Rfc1869/module-type-S/: index.html
colombe/Colombe__Sigs/: index.html
colombe/Colombe__Sigs/Make/: index.html
colombe/Colombe__Sigs/module-type-FUNCTOR/: index.html
colombe/Colombe__State/: index.html
colombe/Colombe_emile/: index.html
colombe/Colombe_mrmime/: index.html
colombe/Enhanced_status_codes/: index.html
colombe/Mime/: index.html
colombe/Starttls/: index.html
emile/: colombe_emile.ml  colombe_emile.mli  dune
ext/: auth.ml  auth.mli  dune  enhanced_status_codes.ml  enhanced_status_codes.mli  mime.ml  mime.mli  starttls.ml  starttls.mli
fuzz/: dune  fuzz.ml
mrmime/: colombe_mrmime.ml  colombe_mrmime.mli  dune
received/: dune  index.html  received.ml  received.mli
received/Received/: index.html
sendmail/: .ocamlformat-ignore  dune  index.html  msendmail.ml  msendmail.mli  sendmail.ml  sendmail.mli  sendmail_lwt.ml  sendmail_lwt.mli  sendmail_miou_unix.ml  sendmail_miou_unix.mli  sendmail_mirage.ml  sendmail_mirage.mli  sendmail_tls.ml  sendmail_with_starttls.ml  sendmail_with_starttls.mli  sendmail_with_tls.ml  sendmail_with_tls.mli  tls_io.ml
sendmail-lwt/: index.html
sendmail-lwt/Sendmail_lwt/: index.html
sendmail-miou-unix/: index.html
sendmail-miou-unix/Sendmail_miou_unix/: index.html
sendmail-mirage/: index.html
sendmail-mirage/Sendmail_mirage/: index.html
sendmail/Sendmail/: index.html
sendmail/Sendmail/Send_mail_p/: index.html
sendmail/Sendmail/Send_mail_s/: index.html
sendmail/Sendmail/State/: index.html
sendmail/Sendmail_tls/: index.html
sendmail/Sendmail_tls/Send_mail_tls_p/: index.html
sendmail/Sendmail_tls/Send_mail_tls_s/: index.html
sendmail/Sendmail_tls/State/: index.html
sendmail/Sendmail_with_starttls/: index.html
sendmail/Sendmail_with_starttls/Context_with_tls/: index.html
sendmail/Sendmail_with_starttls/Make_with_tls/: index.html
sendmail/Sendmail_with_starttls/Make_with_tls/Value/: index.html
sendmail/Sendmail_with_starttls/Make_with_tls/argument-1-Value/: index.html
sendmail/Sendmail_with_starttls/Value/: index.html
sendmail/Sendmail_with_starttls/module-type-S/: index.html
sendmail/Sendmail_with_starttls/module-type-S/Value/: index.html
sendmail/Sendmail_with_starttls/module-type-VALUE/: index.html
sendmail/Sendmail_with_starttls__/: index.html
sendmail/Sendmail_with_starttls__Tls_io/: index.html
sendmail/Sendmail_with_tls/: index.html
sendmail/Sendmail_with_tls/Context_with_tls/: index.html
sendmail/Sendmail_with_tls/Make_with_tls/: index.html
sendmail/Sendmail_with_tls/Make_with_tls/Value/: index.html
sendmail/Sendmail_with_tls/Make_with_tls/argument-1-Value/: index.html
sendmail/Sendmail_with_tls/Value/: index.html
sendmail/Sendmail_with_tls/module-type-S/: index.html
sendmail/Sendmail_with_tls/module-type-S/Value/: index.html
sendmail/Sendmail_with_tls/module-type-VALUE/: index.html
src/: colombe.ml  colombe.mli  decoder.ml  decoder.mli  domain.ml  domain.mli  dune  encoder.ml  encoder.mli  forward_path.ml  path.ml  reply.ml  reply.mli  request.ml  request.mli  reverse_path.ml  rfc1869.ml  rfc1869.mli  sigs.ml  sigs.mli  state.ml  state.mli  trie.ml
test/: dune  test.ml  test_colombe.ml  test_emile.ml  test_sendmail.ml
test_client/: dune  test.ml
(+88 files in other folders)
