opam-version: "2.0"
name:         "colombe"
license:      "MIT"
authors:      [ "Gwenaëlle Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
maintainer:   [ "Gwenaëlle Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://github.com/dinosaure/colombe"
bug-reports:  "https://github.com/dinosaure/colombe/issues"
dev-repo:     "git+https://github.com/dinosaure/colombe.git"
synopsis:     "SMTP protocol in OCaml"
doc:          "https://dinosaure.github.io/colombe/"
description: """This package purpose is to provide an implementation of the
RFC 5321 about SMTP standard in OCaml.
"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "angstrom"
  "ipaddr" {>= "2.9.0"}
  "fmt"
  "tls"
  "logs"
  "base64"
  "rresult"
  "hxd"
  "domain-name" {>= "0.2.1"}
  "alcotest" {with-test}
  "crowbar" {dev & with-test}
]

depopts: [
  "mrmime" {>= "0.1.0"}
]
