opam-version: "2.0"
license:      "MIT"
authors:      [ "Charles-Edouard Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
maintainer:   [ "Charles-Edouard Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://github.com/mirage/colombe"
bug-reports:  "https://github.com/mirage/colombe/issues"
dev-repo:     "git+https://github.com/mirage/colombe.git"
synopsis:     "SMTP protocol in OCaml"
doc:          "https://mirage.github.io/colombe/"
description: """SMTP protocol according RFC5321 without extension."""

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "1.8.0"}
  "fmt"
  "ipaddr" {>= "2.9.0"}
  "angstrom" {>= "0.14.0"}
  "ocaml-syntax-shims"
  "alcotest" {with-test}
  "crowbar" {>= "0.2" & with-test}
]
depopts: [ "emile" ]
conflicts: [ "emile" {< "0.8"} ]
