opam-version: "2.0"
license:      "MIT"
authors:      [ "Gwenaëlle Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
maintainer:   [ "Gwenaëlle Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://github.com/mirage/colombe"
bug-reports:  "https://github.com/mirage/colombe/issues"
dev-repo:     "git+https://github.com/mirage/colombe.git"
doc:          "https://mirage.github.io/colombe/"
synopsis:     "Implementation of the sendmail command for Solo5/mkernel"
description: """A library to be able to send an email for Solo5/mkernel"""

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "2.0"}
  "sendmail" {= version}
  "domain-name"
  "mnet"
  "mnet-tls"
  "flux"
  "mnet-happy-eyeballs"
  "ca-certs-nss" {>= "3.108-1"}
]
x-maintenance-intent: [ "(latest)" ]
pin-depends: [
  [ "mnet.dev" "git+https://github.com/robur-coop/mnet.git#838f7acaf0cca23ff73ff8a43dbb668f3c2aa697" ]
  [ "mnet-tls.dev" "git+https://github.com/robur-coop/mnet.git#838f7acaf0cca23ff73ff8a43dbb668f3c2aa697" ]
  [ "mnet-happy-eyeballs.dev" "git+https://github.com/robur-coop/mnet.git#838f7acaf0cca23ff73ff8a43dbb668f3c2aa697" ]
  [ "flux.dev" "git+https://github.com/robur-coop/flux.git#4b8e293871cac602e9c6ca3ccf1905c5ce8aff46" ]
  [ "fluxt.dev" "git+https://github.com/robur-coop/flux.git#4b8e293871cac602e9c6ca3ccf1905c5ce8aff46" ]
]
