opam-version: "2.0"
license:      "MIT"
authors:      [ "Gwenaëlle Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
maintainer:   [ "Gwenaëlle Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://github.com/mirage/colombe"
bug-reports:  "https://github.com/mirage/colombe/issues"
dev-repo:     "git+https://github.com/mirage/colombe.git"
doc:          "https://mirage.github.io/colombe/"
synopsis:     "Implementation of the sendmail command for Solo5/mkernel"
description: """A library to be able to send an email for Solo5/mkernel"""

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "2.0"}
  "sendmail" {= version}
  "domain-name"
  "mnet"
  "mnet-tls"
  "flux" {>= "0.0.1~beta4"}
  "mnet-happy-eyeballs"
  "ca-certs-nss" {>= "3.108-1"}
]
x-maintenance-intent: [ "(latest)" ]
