opam-version: "2.0"
license:      "MIT"
authors:      [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
maintainer:   [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://github.com/mirage/colombe"
bug-reports:  "https://github.com/mirage/colombe/issues"
dev-repo:     "git+https://github.com/mirage/colombe.git"
synopsis:     "Received field according RFC5321"
doc:          "https://mirage.github.io/colombe/"
description: """A little library to parse or emit a Received field according
RFC5321. It is able to notify which SMTP server serves the email (and track, by this way,
on which way - TLS or not - the email was transmitted)."""

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml"    {>= "4.08.0"}
  "dune"     {>= "1.8.0"}
  "mrmime"   {>= "0.5.0"}
  "emile"    {>= "0.8"}
  "angstrom" {>= "0.14.0"}
  "colombe"  {>= "0.4.0"}
]
