opam-version: "2.0"
name:         "colombe"
license:      "MIT"
authors:      [ "Charles-Edouard Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
maintainer:   [ "Charles-Edouard Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://github.com/dinosaure/colombe"
bug-reports:  "https://github.com/dinosaure/colombe/issues"
dev-repo:     "git+https://github.com/dinosaure/colombe.git"
doc:          "https://dinosaure.github.io/colombe/"
synopsis:     "SMTP protocol in OCaml"
description: """This package purpose is to provide an implementation of the
RFC 5321 about SMTP standard in OCaml.
"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test:  [ "dune" "runtest" "-p" name "-j" jobs ]


pin-depends: [
  [ "crowbar.dev" "git+https://github.com/stedolan/crowbar.git" ]
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "sendmail" {= version}
  "domain-name"
  "lwt"
  "tls"
  "x509" {>= "0.7.0"}
  "alcotest" {with-test}
  "crowbar" {with-test}
]
