opam-version: "2.0"
license:      "MIT"
authors:      [ "Charles-Edouard Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
maintainer:   [ "Charles-Edouard Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://github.com/dinosaure/colombe"
bug-reports:  "https://github.com/dinosaure/colombe/issues"
dev-repo:     "git+https://github.com/dinosaure/colombe.git"
doc:          "https://dinosaure.github.io/colombe/"
synopsis:     "Implementation of the sendmail command over LWT."
description: """A library to be able to send an email with LWT."""

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune"
  "sendmail" {= version}
  "domain-name"
  "lwt"
  "tls"
  "x509" {>= "0.7.0"}
  "alcotest" {with-test}
]
