opam-version: "2.0"
license:      "MIT"
authors:      [ "Gwenaëlle Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
maintainer:   [ "Gwenaëlle Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://github.com/mirage/colombe"
bug-reports:  "https://github.com/mirage/colombe/issues"
dev-repo:     "git+https://github.com/mirage/colombe.git"
doc:          "https://mirage.github.io/colombe/"
synopsis:     "Implementation of the sendmail command over LWT"
description: """A library to be able to send an email with LWT and TLS."""

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml" {>= "5.1.0"}
  "dune" {>= "2.0"}
  "sendmail" {= version}
  "domain-name"
  "happy-eyeballs-miou-unix"
  "tls-miou-unix" {>= "1.0.3"}
  "x509"
  "ca-certs"
  "alcotest" {with-test}
]
