opam-version: "2.0"
license:      "MIT"
authors:      [ "Gwenaëlle Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
maintainer:   [ "Gwenaëlle Lecat" "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://github.com/dinosaure/colombe"
bug-reports:  "https://github.com/dinosaure/colombe/issues"
dev-repo:     "git+https://github.com/dinosaure/colombe.git"
doc:          "https://dinosaure.github.io/colombe/"
synopsis:     "Implementation of the sendmail command."
description: """A library to be able to send an email."""

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune"
  "colombe" {= version}
  "tls"
  "base64"
  "logs"
  "mrmime" {>= "0.2.0" & with-test}
  "alcotest" {with-test}
]
