(library
 (name auth)
 (public_name colombe.auth)
 (modules auth)
 (libraries astring base64 colombe))

(library
 (name mime)
 (public_name colombe.mime)
 (modules mime)
 (libraries colombe))

(library
 (name starttls)
 (public_name colombe.starttls)
 (modules starttls)
 (libraries logs hxd.string domain-name tls colombe))

(library
 (name enhanced_status_codes)
 (public_name colombe.enhanced_status_codes)
 (modules enhanced_status_codes)
 (libraries angstrom logs colombe))