(executable
 (name test)
 (modules test)
 (libraries colombe alcotest))

(rule
 (alias runtest)
 (deps
  (:test test.exe))
 (package colombe)
 (action
  (run %{test} --color=always)))

(executable
 (name test_sendmail)
 (modules test_sendmail)
 (libraries sendmail colombe colombe.emile mrmime alcotest))

(rule
 (alias runtest)
 (deps
  (:test test_sendmail.exe))
 (package sendmail)
 (action
  (run %{test} --color=always)))

(executable
 (name test_emile)
 (modules test_emile)
 (libraries colombe colombe.emile emile alcotest ipaddr))

(rule
 (alias runtest)
 (deps
  (:test test_emile.exe))
 (package colombe)
 (action
  (run %{test} --color=always)))
